@@ -14,5 +14,5 @@ AC_SUBST(GUILE_GLIB_LIBS)
 AC_CONFIG_COMMANDS([glib/gnome/gobject/guile-gnome-gobject],
 [
  rm -f glib/gnome/gobject/guile-gnome-gobject
- ln -s `realpath $srcdir`/glib/gnome/gobject/ glib/gnome/gobject/guile-gnome-gobject
+ ln -s `readlink -f $srcdir`/glib/gnome/gobject/ glib/gnome/gobject/guile-gnome-gobject
 ])
